--- a/app/src/main/res/layout/fragment_download.xml
+++ b/app/src/main/res/layout/fragment_download.xml
@@ -14,7 +14,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:contentDescription="@string/app_name"
         app:layout_constraintStart_toStartOf="parent"
-        tools:src="@mipmap/ic_launcher"
+        tools:src="@drawable/lovingone"
+        android:src="@drawable/lovingone"
         android:scaleType="centerCrop"/>
 
     <com.google.android.material.button.MaterialButton
@@ -30,7 +31,7 @@
         app:icon="@drawable/arrow_back"
         app:iconGravity="textStart"
         app:iconPadding="0dp"
-        app:iconTint="@color/white"
+        app:iconTint="@color/primary_dark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -47,7 +48,7 @@
         app:icon="@drawable/icon_more"
         app:iconGravity="textStart"
         app:iconPadding="0dp"
-        app:iconTint="@color/white"
+        app:iconTint="@color/primary_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -59,24 +60,34 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:gravity="center"
         android:layout_margin="12dp">
+    </LinearLayout>
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/setWallpaper"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/download"
-            android:paddingHorizontal="23dp"
-            android:fontFamily="monospace"
-            android:backgroundTint="@color/black"
-            android:textSize="20sp"/>
+            android:text="@string/setWallpaper"
+            android:backgroundTint="@color/primary_dark"
+            android:textSize="@dimen/medium_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_like"
+            android:layout_marginBottom="20dp"
+            />
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_like"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:backgroundTint="@color/black"
-            android:layout_marginStart="12dp"
+            android:backgroundTint="@color/primary_dark"
             app:icon="@drawable/checkbox_favourite"
             app:iconGravity="textStart"
             app:iconPadding="2dp"
-            android:contentDescription="@string/download"/>
-    </LinearLayout>
+            android:contentDescription="@string/download"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/setWallpaper"
+            android:layout_marginBottom="20dp"
+            />
+
 
 
 
