--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -97,7 +97,7 @@
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
         app:tabGravity="fill"
         app:tabIndicator="@drawable/tab_background"
-        app:tabIndicatorColor="#D2D6CA"
+        app:tabIndicatorColor="@color/primary_dark"
         app:tabIndicatorFullWidth="true"
         app:tabIndicatorGravity="stretch"
         app:tabInlineLabel="true"
@@ -108,18 +108,15 @@
 
     </com.google.android.material.tabs.TabLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_home"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tabBar_layout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:itemCount="20"
-        android:layout_marginTop="10sp"
-        tools:listitem="@layout/rv_collection_item"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tabBar_layout" />
 
 
 
