--- a/app/src/main/res/layout/rv_collection_item.xml
+++ b/app/src/main/res/layout/rv_collection_item.xml
@@ -1,58 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-
+    android:layout_width="match_parent"
+    android:layout_height="265dp"
+    android:layout_margin="15dp"
+    app:cardCornerRadius="6dp">
 
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="10dp"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+       >
 
 
         <ImageView
-            android:id="@+id/ov_collection"
-            android:layout_width="180dp"
+            android:id="@+id/coverPhoto"
+            android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:src="@drawable/lovingone"
             android:scaleType="fitXY"
-            />
-
-
+            android:src="@drawable/lovingone" />
 
         <TextView
             android:id="@+id/collection_name"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="28dp"
+            android:layout_marginTop="9dp"
             android:text="Animals"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="18sp"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:layout_marginTop="8dp"
-            />
+            android:textStyle="bold" />
+
         <TextView
-            android:layout_width="200dp"
+            android:id="@+id/total_image"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="1023 Wallpapers"
-            android:layout_marginTop="4dp"
-            android:textSize="16sp"
+            android:textAlignment="center"
             android:textColor="@color/black"
-            android:textAlignment="center"/>
+            android:textSize="16sp" />
+
+        </LinearLayout>
 
 
-    </LinearLayout>
 
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
